# thumbnail-alchemist

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  PERFORMANCE_OPTIMIZATION_BRAINSTORM.md  README.md  pyproject.toml  ruff.toml
app/: ADAPTIVE_SAMPLING_DESIGN.md  THUMBNAIL_AGENT_MODEL_ARCHITECTURE.md  THUMBNAIL_SELECTION_AGENT_DESIGN.md  __init__.py  adaptive_sampling.py  audio_media.py  constants.py  face_analysis.py  main.py  models.py  pace_analysis.py  speech_semantics.py  storage.py  vision_media.py
app/agents/: __init__.py
app/analysis/: __init__.py  adaptive_sampling.py  moment_importance.py  output.py  pace_analysis.py  processing.py  segment_analyzer.py
app/audio/: __init__.py  extraction.py  saliency.py  speech_detection.py  speech_semantics.py
app/models/: __init__.py  audio.py  media.py  thumbnail.py  upload.py  vision.py
app/thumbnail_agent/: EXAMPLE_OUTPUT.md  __init__.py  agent_usage_example.py  contextual_scoring.py  contextual_scoring_examples.py  example_usage.py  scoring_weights.py  thumbnail_selector.py
app/utils/: __init__.py  storage.py
app/vision/: __init__.py  extraction.py  face_analysis.py  feature_analysis.py  stack.py  visual_change.py
scripts/: download_models.py
terraform/: .gitignore  README.md  iam.tf  main.tf  storage.tf  terraform.tfvars  variables.tf
tests/: README.md  test_api.py  test_audio_media.py  test_vision_media.py
