[project]
name = "thumbnail-alchemist"
version = "0.1.0"
description = "Multimodal AI agent that turns raw video, images, and creator profiles into high-impact YouTube thumbnails"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
