[project]
name = "thumbnail-alchemist"
version = "0.1.0"
description = "Multimodal AI agent that turns raw video, images, and creator profiles into high-impact YouTube thumbnails"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "google-cloud-storage>=3.7.0",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "httpx",
    "anyio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
